:alien: Styling scrollBar and fixing toggle theme button hover

--- a/social-media-dashboard-with-theme-switcher-master/styles.css
+++ b/social-media-dashboard-with-theme-switcher-master/styles.css
@@ -40,10 +40,22 @@ html, body {
 
 body {
   display: flex;
-  overflow: hidden;
   align-items: center;
   background: var(--bg);
   flex-direction: column;
+}
+
+/* Scrollbar */
+*::-webkit-scrollbar {
+  width: 15px;
+  background: var(--bg);
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: var(--card-bg);
+  background-clip: padding-box;
+  border: 4px transparent solid;
 }
 
 .header {
@@ -99,12 +111,19 @@ body {
   pointer-events: all;
 }
 
+.toggle-container input:hover {
+  cursor: pointer;
+}
+
+.toggle-container input:hover+.slider {
+  background: linear-gradient(90deg, #378fe6, #3eda82);
+}
+
 .slider {
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  cursor: pointer;
   transition: 0.4s;
   position: absolute;
   pointer-events: none;
